# contracts/openapi/healthy-v1.yaml
@@ -512,6 +512,19 @@
             "title": "Recorded At",
             "type": "string"
           },
+          "steps": {
+            "anyOf": [
+              {
+                "maximum": 200000.0,
+                "minimum": 0.0,
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Steps"
+          },
           "systolic_bp_mm_hg": {
             "anyOf": [
               {
@@ -609,6 +622,17 @@
             "title": "Recorded At",
             "type": "string"
           },
+          "steps": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Steps"
+          },
           "systolic_bp_mm_hg": {
             "anyOf": [
               {
@@ -639,6 +663,7 @@
           "systolic_bp_mm_hg",
           "diastolic_bp_mm_hg",
           "heart_rate_bpm",
+          "steps",
           "weight_kg",
           "blood_glucose_mg_dl",
           "note",
